# test-rs

./: .gitignore  Cargo.toml  rustfmt.toml
src/: main.rs
