[package]
name = "test-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bson = "2.4.0"
cacache = { version = "11.4.0", default-features = false, features = ["tokio-runtime", "async-attributes"] }
postcard = { version = "1.0.4", features = ["alloc"] }
serde = "1.0"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"]}
